docs(api): added create post payload on swagger
